switch patreon to mee6

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -128,7 +128,7 @@
                 "title": "Support BSManager 💖",
                 "description": "Support the project and help us to provide continuous improvements to BSManager.",
                 "buttons": {
-                    "support": "Support BSManager",
+                    "support": "Support BSManager 🥰",
                     "supporters": "Supporters 👀"
                 },
                 "view": {
