--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -128,7 +128,7 @@
                 "title": "Apoyo BSManager 💖",
                 "description": "Apoye el proyecto y ayúdenos a proporcionar mejoras continuas a BSManager.",
                 "buttons": {
-                    "support": "Apoyo BSManager",
+                    "support": "Apoyo BSManager 🥰",
                     "supporters": "Apoyos 👀"
                 },
                 "view": {
