--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -128,7 +128,7 @@
                 "title": "Soutenir BSManager 💖",
                 "description": "Soutien le projet et aide-nous à fournir des améliorations continues à BSManager.",
                 "buttons": {
-                    "support": "Soutenir BSManager",
+                    "support": "Soutenir BSManager 🥰",
                     "supporters": "Supporteurs 👀"
                 },
                 "view": {
