--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -17,8 +17,11 @@
         "version-viewer": {
             "launch-mods": {
                 "oculus": "Mode Oculus",
+                "oculus-description": "Si vous exécutez Beat Saber via Steam, cela vous permet de jouer au jeu sur un casque Oculus.",
                 "desktop": "Mode Bureau",
-                "debug": "Mode Debug"
+                "desktop-description": "Cela vous permet d'utiliser WASD et la souris pour naviguer dans le menu en jeu. Cela rend les tests beaucoup plus faciles, car vous n'avez pas à mettre votre casque!",
+                "debug": "Mode Debug",
+                "debug-description": "Active la fenêtre de log pour IPA. Cela affichera la console de débogage utilisée par les mods."
             },
             "maps": {
                 "search-bar": {
