--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -17,8 +17,11 @@
         "version-viewer": {
             "launch-mods": {
                 "oculus": "Oculus Mod",
+                "oculus-description": "If you are running Beat Saber through Steam, this allows you to play the game on an Oculus headset.",
                 "desktop": "Desktop Mod",
-                "debug": "Debug Mod"
+                "desktop-description": "This allows you to use WASD and the mouse to navigate around the menu in game. This makes testing much easier, because you don't have to put on your headset!",
+                "debug": "Debug Mod",
+                "debug-description": "Enables the output log window for IPA. This will show the debug console that mods use."
             },
             "maps": {
                 "search-bar": {
