--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -13,6 +13,10 @@
         "refuse": "Refuse",
         "apply": "Apply"
     },
+    "nav-bar":{
+        "add-version": "Add a version",
+        "settings": "Settings"
+    },
     "pages": {
         "version-viewer": {
             "launch-mods": {
