--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -45,7 +45,7 @@
                             "link-maps": {
                                 "tooltips": {
                                     "link": "Link maps",
-                                    "unlink": "Unling maps"
+                                    "unlink": "Unlink maps"
                                 }
                             }
                         },
