--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -18,6 +18,9 @@
         "settings": "Ajustes"
     },
     "pages": {
+        "shared-maps":{
+            "title": "Mapas comunes"
+        },
         "version-viewer": {
             "launch-mods": {
                 "oculus": "Oculus Mod",
