--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -447,9 +447,15 @@
                     "label": "Stay connected"
                 }
             },
+            "why-credentials": "Why do you need my credentials ?",
             "buttons": {
                 "submit": "Login"
             }
+        },
+        "steam-credentials":{
+            "title": "Steam Credentials",
+            "p-1": "The credentials are only used to download the game because steam need to verify that you paid the game in order to be allowed to download it. They aren't saved and directly passed to DepotDownloader. If you don't want to enter your credentials you can follow this tutorial :",
+            "p-2": "and then click on the gear icon in the top right corner and select \"Import a version\", select the folder where beat saber has been downloaded (If you follow the tutorial above you should have the correct location)"
         },
         "bs-import-version":{
             "title": "Import a version",
