change oculus mode description

--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -24,7 +24,7 @@
         "version-viewer": {
             "launch-mods": {
                 "oculus": "Mode Oculus",
-                "oculus-description": "Si vous utilisez Beat Saber via Steam, cela permet de contourner SteamVR ce qui peut améliorer les performances. Ceci n'est pas nécessaire pour utiliser les casques Oculus.",
+                "oculus-description": "Si vous utilisez Beat Saber via Steam, cela vous permet d'utiliser le compositeur VR d'Oculus sans passer par SteamVR, pour gagner en performances. Ceci n'est pas nécessaire pour utiliser les casques Oculus.",
                 "desktop": "Mode Bureau",
                 "desktop-description": "Cela vous permet d'utiliser WASD et la souris pour naviguer dans le menu en jeu. Cela rend les tests beaucoup plus faciles, car vous n'avez pas à mettre votre casque!",
                 "debug": "Mode Debug",
