--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -83,7 +83,8 @@
                 "verify-files": "Verificar los archivos",
                 "clone": "Clonar",
                 "edit": "Editar",
-                "uninstall": "Desinstalar"
+                "uninstall": "Desinstalar",
+                "shared-folders": "Carpetas Compartidas"
             }
         },
         "available-versions": {
@@ -413,6 +414,14 @@
                 "success":"Instalación del modelo completada",
                 "error":"Se produjo un error durante la instalación del modelo"
             }
+        },
+        "shared-folder": {
+            "success": {
+                "yeet-mods-disabled": {
+                    "title": "YeetMods desactivado",
+                    "msg": "Para evitar la eliminación de mods, se ha desactivado el valor de la variable 'YeetMods' en el archivo 'Beat Saber IPA.json'"
+                }
+            }
         }
     },
     "modals": {
@@ -562,6 +571,15 @@
             "li-2": "Es probable que los mods dejen de funcionar debido a las actualizaciones y eso es normal. Sé paciente y respetuoso cuando suceda esto, ya que los modders son voluntarios y tienen una vida.",
             "li-3": "Beat Games no está intencionalmente tratando de romper los mods. Quieren mejorar el juego base y a veces esto rompe los mods, pero no es su objetivo matar a los mods.",
             "p-2": "No ataques a los desarrolladores por problemas relacionados con los mods y viceversa. Los modders y los desarrolladores son dos grupos distintos. No seas tonto, ¿de acuerdo?"
+        },
+        "shared-folders":{
+            "title": "Carpetas Compartidas",
+            "description": "Enlace las carpetas de BeatSaber para sincronizar su contenido con las carpetas compartidas en otras versiones. Tenga en cuenta que la eliminación de contenido también se compartirá.",
+            "buttons": {
+                "add-folder": "Añadir Carpeta",
+                "link-folder": "Enlazar Carpeta",
+                "unlink-folder": "Desenlazar Carpeta"
+            }
         }
     },
     "maps": {
